fix team image z-index

--- a/web/css/pages/blog/blog.less
+++ b/web/css/pages/blog/blog.less
@@ -1275,7 +1275,6 @@
     bottom: 0;
     top: 0;
     margin: auto;
-    z-index: 3;
   }
 
   &__title {
